# Copyright (c) 2022 Yakkhini
# Planting Pong is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan PSL v2.
# You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
# EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
# MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "pong_planting"
version = "0.1.0"
authors = ["Yakkhini <sign@yechanv.cc>"]
edition = "2021"
description = "A ECS driven breakout game, writen in Rust, Bevy engine."
repository = "https://github.com/Yakkhini/PongPlanting"
license = "Mulan PSL v2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0"}
bevy-inspector-egui = "0.11.0"
rand = "0.8"
heron = { version = "3", features = ["2d"] }